Revert "Cover: Fix matrix alignment issue. (#28361)" (#28364)
This reverts commit 1796afcc277c3f457904fd616c80fa903f3c74ea.

Reason: Visually broken on the frontend

This basically gets us back to the state of Cover block styling prior to #28114.

--- a/packages/block-library/src/cover/style.scss
+++ b/packages/block-library/src/cover/style.scss
@@ -172,10 +172,8 @@
 .wp-block-cover__image-background,
 .wp-block-cover__video-background {
 	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
 }
 
